--- a/web/index.html
+++ b/web/index.html
@@ -2,163 +2,89 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <title>Semantisches Netzwerk mit Details & Legende</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Herrnhuter Brüdergemeine</title>
+  
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <script src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
-  <style>
-    body {
-      font-family: sans-serif;
-    }
-    #legend {
-      display: flex;
-      gap: 20px;
-      margin-bottom: 10px;
-      padding: 8px;
-      border: 1px solid #ddd;
-      background-color: #f5f5f5;
-    }
-    .legend-item {
-      display: flex;
-      align-items: center;
-      gap: 6px;
-    }
-    .legend-color {
-      width: 16px;
-      height: 16px;
-      border-radius: 50%;
-      display: inline-block;
-    }
-    #controls {
-      margin-bottom: 1em;
-    }
-    #mynetwork {
-      width: 100%;
-      height: 70vh;
-      border: 1px solid lightgray;
-    }
-    #detailsPanel {
-      border-top: 1px solid #ccc;
-      padding-top: 10px;
-      display: none;
-    }
-    .detail-card {
-      background-color: #f9f9f9;
-      padding: 10px;
-      margin-bottom: 10px;
-      border-left: 4px solid #2196F3;
-    }
-    .detail-card h4 {
-      margin: 0 0 5px 0;
-    }
-  </style>
 </head>
 <body>
-  <h2>Semantisches Netzwerk</h2>
 
-  <div id="legend">
-    <div class="legend-item"><span class="legend-color" style="background:#97C2FC;"></span>Person</div>
-    <div class="legend-item"><span class="legend-color" style="background:#FFA07A;"></span>Organisation</div>
-    <div class="legend-item"><span class="legend-color" style="background:#A0E7E5;"></span>Tätigkeit</div>
-    <div class="legend-item"><span class="legend-color" style="background:#FFD86E;"></span>Ort</div>
-    <div class="legend-item"><span class="legend-color" style="background:#D3D3D3;"></span>Datum</div>
+  <h1>Von Digitalisaten zu Wissensgraphen: Eine automatisierte Extraktion und semantische Modellierung biographischer Daten am Beispiel von Lebensbeschreibungen der Herrnhuter Brüdergemeine</h1>
+  
+  <div>
+    <p>In diesem Projekt werden historische Lebensbeschreibungen analysiert, automatisiert verarbeitet und als semantische Netzwerke visualisiert. Dies ermöglicht neue Perspektiven auf historische Zusammenhänge.</p>
   </div>
 
-  <div id="controls">
-    <label>
-      Filter Knoten-Typ:
-      <select id="nodeFilterSelect">
-        <option value="">Alle Typen</option>
-        <option value="person">Person</option>
-        <option value="organisation">Organisation</option>
-        <option value="tätigkeit">Tätigkeit</option>
-        <option value="location">Ort</option>
-        <option value="date">Datum</option>
+  <div>
+    <h2>Biographische Daten der Herrnhuter Brüdergemeine</h2>
+
+    <div id="controls">
+      <label>
+        Filter nach Beziehung:
+        <select id="relationFilter">
+          <option value="">Alle Beziehungen</option>
+          <option value="Mutter">Mutter</option>
+          <option value="Ehepartner(in)">Ehepartner(in)</option>
+          <option value="Elternteil">Elternteil</option>
+          <option value="Vater">Vater</option>
+          <option value="Geburtsdatum">Geburtsdatum</option>
+          <option value="Geschwister">Geschwister</option>
+          <option value="Mitglied von">Mitglied von</option>
+          <option value="Sterbedatum">Sterbedatum</option>
+          <option value="Geburtsort">Geburtsort</option>
+          <option value="Sterbeort">Sterbeort</option>
+          <option value="Kind">Kind</option>
+          <option value="Schlüsselereignis">Schlüsselereignis</option>
+        </select>
+      </label>
+
+      <label>
+        Filter nach Knotentyp:
+        <select id="nodeTypeFilter">
+          <option value="">Alle Typen</option>
+          <option value="person">Person</option>
+          <option value="organisation">Organisation</option>
+          <option value="location">Ort</option>
+        </select>
+      </label>
+    </div>
+
+    <div class="main-layout">
+      <div id="mynetwork"></div>
+      <div id="detailsPanel">
+        <div class="card" id="card" style="display: none;">
+          <h2 id="name"></h2>
+          <div id="description"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div>
+    <h2>Wege zu Missionsstellen</h2>
+    <p>Diese Visualisierung zeigt die typischen geografischen und institutionellen Stationen auf dem Weg zu einer Missionsstelle.</p>
+  
+    <!-- 🔽 Filter-Bereich -->
+    <div id="filterBar" style="margin-bottom: 1rem;">
+      <label for="personFilter">Person:</label>
+      <select id="personFilter">
+        <option value="">Alle Personen</option>
+        <!-- Optionen werden per JS aus JSON generiert -->
       </select>
-    </label>
+    </div>
+  
+    <div id="network_event"></div>
+    <div id="map"></div>
   </div>
 
-  <div id="mynetwork"></div>
+  <!-- Leaflet-Karte -->
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
-  <div id="detailsPanel">
-    <h3>Details zum ausgewählten Knoten:</h3>
-    <div id="detailsContent"></div>
-  </div>
+  <!-- Eigene Scripte -->
+  <script src="script_person.js"></script>  
+  <script src="script_weg.js"></script>
 
-  <script>
-    let nodeFilterValue = "";
-
-    fetch("../data/json/graph_data_with_details.json")
-      .then((response) => response.json())
-      .then((data) => {
-        const allNodes = new vis.DataSet(data.nodes);
-        const allEdges = new vis.DataSet(data.edges);
-        const details = data.details;
-
-        const nodesView = new vis.DataView(allNodes, {
-          filter: function (node) {
-            return !nodeFilterValue || node.group === nodeFilterValue;
-          }
-        });
-
-        const edgesView = new vis.DataView(allEdges);
-
-        const container = document.getElementById("mynetwork");
-        const network = new vis.Network(container, {
-          nodes: nodesView,
-          edges: edgesView
-        }, {
-          nodes: {
-            shape: "dot",
-            size: 20,
-            font: { size: 16, color: "#000" }
-          },
-          groups: {
-            person: { color: "#97C2FC" },
-            organisation: { color: "#FFA07A" },
-            tätigkeit: { color: "#A0E7E5" },
-            location: { color: "#FFD86E" },
-            date: { color: "#D3D3D3" }
-          },
-          edges: {
-            arrows: "to",
-            font: { align: "middle", size: 12, color: "#444" },
-            color: { color: "#999999" }
-          },
-          layout: { improvedLayout: true },
-          physics: { stabilization: false }
-        });
-
-        document.getElementById("nodeFilterSelect").addEventListener("change", (e) => {
-          nodeFilterValue = e.target.value;
-          nodesView.refresh();
-        });
-
-        network.on("selectNode", function (params) {
-          const id = params.nodes[0];
-          const contentDiv = document.getElementById("detailsContent");
-          const panel = document.getElementById("detailsPanel");
-
-          const infoList = details[id] || [];
-          if (infoList.length === 0) {
-            contentDiv.innerHTML = "<p>Keine Details verfügbar.</p>";
-          } else {
-            contentDiv.innerHTML = infoList.map((item) => `
-              <div class="detail-card">
-                <h4>${item.autor}</h4>
-                <p><strong>Text:</strong> ${item.text}</p>
-                <p><strong>Prädikat:</strong> ${item.prädikat}</p>
-                <p><strong>Zeit:</strong> ${item.zeit || "—"}</p>
-                <p><a href="${item.ref}" target="_blank">Quelle öffnen</a> (${item.datei})</p>
-              </div>
-            `).join("");
-          }
-
-          panel.style.display = "block";
-        });
-
-        network.on("deselectNode", function () {
-          document.getElementById("detailsPanel").style.display = "none";
-        });
-      });
-  </script>
 </body>
 </html>
