--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
   
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
 </head>
 <body>
@@ -26,17 +27,16 @@
         <select id="relationFilter">
           <option value="">Alle Beziehungen</option>
           <option value="Mutter">Mutter</option>
-          <option value="Ehepartner(in)">Ehepartner(in)</option>
-          <option value="Elternteil">Elternteil</option>
-          <option value="Vater">Vater</option>
-          <option value="Geburtsdatum">Geburtsdatum</option>
-          <option value="Geschwister">Geschwister</option>
-          <option value="Mitglied von">Mitglied von</option>
-          <option value="Sterbedatum">Sterbedatum</option>
-          <option value="Geburtsort">Geburtsort</option>
-          <option value="Sterbeort">Sterbeort</option>
-          <option value="Kind">Kind</option>
-          <option value="Schlüsselereignis">Schlüsselereignis</option>
+        <option value="Ehepartner(in)">Ehepartner(in)</option>
+        <option value="Elternteil">Elternteil</option>
+        <option value="Vater">Vater</option>
+        <option value="Freund(in)">Freund(in)</option>
+        <option value="Geschwister">Geschwister</option>
+        <option value="Kollege(in)">Kollege(in)</option>
+        <option value="Mitreisende">Mitreisende</option>
+        <option value="Geburtsort">Geburtsort</option>
+        <option value="Sterbeort">Sterbeort</option>
+        <option value="Kind">Kind</option>
         </select>
       </label>
 
@@ -45,7 +45,6 @@
         <select id="nodeTypeFilter">
           <option value="">Alle Typen</option>
           <option value="person">Person</option>
-          <option value="organisation">Organisation</option>
           <option value="location">Ort</option>
         </select>
       </label>
@@ -66,7 +65,7 @@
     <h2>Wege zu Missionsstellen</h2>
     <p>Diese Visualisierung zeigt die typischen geografischen und institutionellen Stationen auf dem Weg zu einer Missionsstelle.</p>
   
-    <!-- 🔽 Filter-Bereich -->
+    <!-- Filter-Bereich -->
     <div id="filterBar" style="margin-bottom: 1rem;">
       <label for="personFilter">Person:</label>
       <select id="personFilter">
@@ -76,7 +75,11 @@
     </div>
   
     <div id="network_event"></div>
-    <div id="map"></div>
+
+    <div class="map-wrapper">
+      <div id="map"></div>
+    </div>
+    
   </div>
 
   <!-- Leaflet-Karte -->
@@ -85,6 +88,16 @@
   <!-- Eigene Scripte -->
   <script src="script_person.js"></script>  
   <script src="script_weg.js"></script>
+
+
+  <footer class="site-footer">
+    <div class="footer-content">
+      <p><strong>Kontakt:</strong></p>
+      <p>E-Mail: <a href="mailto:svetlana.yakutina@web.de">Svetlana Yakutina</a></p>
+      <p>GitHub: <a href="https://github.com/SvetlanaYakutinaa" target="_blank">Svetlana Yakutina</a></p>
+    </div>
+  </footer>
+  
 
 </body>
 </html>
